@@ -52,6 +52,10 @@ begin
       def test_should_use_save_as_action
         assert_equal :save, @machine.action
       end
+      
+      def test_should_use_transactions
+        assert_equal true, @machine.use_transactions
+      end
     end
     
     class MachineTest < BaseTestCase
